<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_welcome"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.ase.aat_android.activities.SigninActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:gravity="center_horizontal"
        android:paddingTop="15dp"
        android:text="@string/app_full_name"
        android:textSize="@dimen/text_view_text_size"
        android:id="@+id/app_name_text_view"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/app_name_text_view"
        android:orientation="vertical"
        android:layout_marginTop="15dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/padding"
            android:paddingRight="@dimen/padding"
            android:hint="@string/username_hint"
            android:inputType="textEmailAddress"
            android:id="@+id/login_username_edittext"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/padding"
            android:paddingRight="@dimen/padding"
            android:hint="@string/password_hint"
            android:id="@+id/login_password_edittext"
            android:inputType="textPassword"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/padding"
            android:paddingRight="@dimen/padding"
            android:text="@string/login"
            android:textSize="@dimen/button_text_size"
            android:textAlignment="center"
            android:id="@+id/login_button"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/padding"
            android:paddingRight="@dimen/padding"
            android:text="@string/signup"
            android:textSize="@dimen/button_text_size"
            android:textAlignment="center"
            android:id="@+id/signup_button"/>
    </LinearLayout>

</RelativeLayout>
